kubernetes/comicnerd-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: comicnerd
  namespace: comicnerd

spec:
  replicas: 1

  selector:
    matchLabels:
      app: comicnerd

  template:
    metadata:
      labels:
        app: comicnerd

    spec:
      containers:

        - name: comicnerd

          image: shaurya1607/comicnerd:v6
          imagePullPolicy: IfNotPresent

          ports:
            - containerPort: 8000
              protocol: TCP

          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"

            limits:
              cpu: "500m"
              memory: "768Mi"

          livenessProbe:
            httpGet:
              path: /health/
              port: 8000

              httpHeaders:
                - name: Host
                  value: localhost

            initialDelaySeconds: 30
            periodSeconds: 20
            timeoutSeconds: 5
            failureThreshold: 3

          readinessProbe:
            httpGet:
              path: /health/
              port: 8000

              httpHeaders:
                - name: Host
                  value: localhost

            initialDelaySeconds: 20
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
