kubernetes/postgres.yaml
apiVersion: v1
kind: Service

metadata:
  name: postgres
  namespace: comicnerd

spec:
  selector:
    app: postgres

  ports:
    - port: 5432
      targetPort: 5432

  clusterIP: None


---
apiVersion: apps/v1
kind: StatefulSet

metadata:
  name: postgres
  namespace: comicnerd

spec:
  serviceName: postgres
  replicas: 1

  selector:
    matchLabels:
      app: postgres

  template:
    metadata:
      labels:
        app: postgres

    spec:
      containers:

        - name: postgres

          image: postgres:17.11

          ports:
            - containerPort: 5432

          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"

            limits:
              cpu: "500m"
              memory: "768Mi"

          volumeMounts:
            - name: postgres-data
              mountPath: /var/lib/postgresql/data

  volumeClaimTemplates:

    - metadata:
        name: postgres-data

      spec:
        accessModes:
          - ReadWriteOnce

        resources:
          requests:
            storage: 5Gi
