kubernetes/comicnerd-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: comicnerd
  namespace: comicnerd

spec:
  ingressClassName: traefik

  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix

            backend:
              service:
                name: comicnerd
                port:
                  number: 80
